# ml-assessment

./: .gitignore  README.md  config.py  keyword_spam.ipynb  pyproject.toml  pytest.ini  test_utils.py  utils.py
data/: train_set.tsv
depop/: __init__.py  artifacts.py  cache.py  data.py  evaluation.py  inference.py  media.py  repo.py  settings.py  training.py
docs/: assigment.md  image_download_status.csv  plan_collab.md
tests/: test_data.py  test_workflow.py
