[project]
name = "keyword-spam-collab"
version = "0.1.0"
description = "Helpers and tooling for the Colab-based keyword spam workflow"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32",
    "google-cloud-storage>=2.17",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["utils"]
